--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,22 +2,34 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ks.agroconnect">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
-        android:icon="@drawable/farmer_logo"
+        android:icon="@drawable/farmer_logo2"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/farmer_logo"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".SplashScreen">
+        <activity android:name=".KrishiupdatesActivity"></activity>
+        <activity android:name=".AgromarketActivity" />
+        <activity android:name=".KisankalyanActivity" />
+        <activity android:name=".AssistanceActivity" />
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".SplashScreen" />
+        <activity android:name=".MainActivity" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".RegisterActivity"/>
-        <activity android:name=".HomeActivity"/>
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".HomeActivity">
+        </activity>
+
     </application>
 
 </manifest>
